correct spacing .gallery

--- a/styles.css
+++ b/styles.css
@@ -99,16 +99,19 @@ button,
     color: #1F2937;
     font-size: 36px;
     font-weight: 900;
-    /*justify-content: center;*/
+    margin: 40px 0px;
 }
 
 .section {
     flex-direction: row;
+    margin-bottom: 100px;
 }
 
 .container {
     flex-direction: column;
     align-items: center;
+    margin: 30px;
+    margin-top: 0px;
 }
 
 .box {
@@ -116,6 +119,7 @@ button,
     width: 150px;
     border: 5px solid #3882F6;
     border-radius: 10px;
+    margin-bottom: 5px;
 }
 
 .subtext {
